# skills_in_vscode

./: .gitignore  QUICKSTART.md  README.md
.github/copilot/: instructions.md  java-instructions.md  javascript-instructions.md  python-instructions.md
docs/: overview.md
docs/agent-skills/: README.md
docs/anthropic-skills/: configuration.md  creating-skills.md  installation.md
docs/custom-agents/: README.md
docs/custom-instructions/: README.md  agents.md  java.md  nodejs.md  python.md
docs/migration/: comparison.md  complementary-usage.md  migration-strategy.md
docs/prompt-files/: README.md
examples/agents/: architect.agent.md  implementer.agent.md  security.agent.md
examples/ai-agent-development/: MIGRATION.md  README.md
examples/ai-agent-development/.github/: copilot-instructions.md
examples/ai-agent-development/.github/agents/: blue-team.agent.md  red-team.agent.md
examples/ai-agent-development/.github/prompts/: agent-communication.prompt.md  new-agent.prompt.md
examples/ai-agent-development/.github/skills/agent-testing/: SKILL.md
examples/java/: README.md
examples/nodejs/: README.md  package.json
examples/nodejs/src/: UserService.ts
examples/prompts/: component.prompt.md  review.prompt.md  test.prompt.md
examples/python/: README.md  pyproject.toml  requirements.txt
examples/python/src/: __init__.py
examples/python/src/models/: user.py
examples/python/src/services/: user_service.py
examples/skills/test-generator/: SKILL.md
skills/anthropic/: README.md  code-reviewer.json  test-generator.json
